# pizero-sim

./: commands_saved.txt  server.py
diffusion_policy_test/: CMakeLists.txt  package.xml
diffusion_policy_test/launch/: visualize.launch
diffusion_policy_test/rviz/: config.rviz
diffusion_policy_test/scripts/: policy_visualizer.py
franka_ros_code/franka_ros/: README2.md  context.txt  info_franka.txt
franka_ros_code/franka_ros/Cross_Movement/: get_xarm_ik_solution.py
franka_ros_code/franka_ros/Cross_Movement/Franka_Recording/: CMakeLists.txt  cross_context.txt  cross_movement.txt  error_franka.txt  error_gazebo.txt  error_xarm.txt  franka_poses.json  initial_positions.txt  package.xml  urdf_data.txt
franka_ros_code/franka_ros/Cross_Movement/Franka_Recording/launch/: record_moveit.launch
franka_ros_code/franka_ros/Cross_Movement/Franka_Recording/src/: record_franka_poses.py
franka_ros_code/franka_ros/Cross_Movement/xarm_Following/: CMakeLists.txt  package.xml
franka_ros_code/franka_ros/franka_control/launch/: franka_control.launch
franka_ros_code/franka_ros/franka_gazebo/: CMakeLists.txt
franka_ros_code/franka_ros/franka_gazebo/config/: sim_controllers.yaml
franka_ros_code/franka_ros/franka_gazebo/launch/: mini.launch  panda.launch  panda_2.launch  robot.launch
franka_ros_code/franka_ros/franka_gazebo/world/: panda_table_world.world
franka_ros_code/franka_ros/panda_policy_control/: CMakeLists.txt  package.xml
franka_ros_code/franka_ros/panda_policy_control/launch/: cross_context.txt  cross_movement.txt  imitation_node.launch  panda_control.launch
franka_ros_code/franka_ros/panda_policy_control/src/: franka_xarm_imitation_node.py  openvla_policy_node.py  panda_policy_node.py
learning_image_geometry/: CMakeLists.txt  draw.launch  draw_frames.cpp  package.xml
openpi-client/devel/: .catkin
trajectory_testing/: CMakeLists.txt  package.xml
trajectory_testing/config/: rviz_config.rviz
trajectory_testing/launch/: rviz_trajectory.launch
trajectory_testing/scripts/: trajectory_publisher.py
trajectory_testing/urdf/: xarm7.urdf
xarm_control/: CMakeLists.txt  info.txt  package.xml
xarm_control/launch/: xarm_control.launch
xarm_control/src/: README.md  camera_joint_control_node.py  camera_joint_control_node_droid.py  move_xarm.py  old_code.py  output.txt  updates.txt
xarm_ros_code/xarm_ros/xarm7_gripper_moveit_config/config/: arm_controllers.yaml
xarm_ros_code/xarm_ros/xarm7_gripper_moveit_config/launch/: move_group.launch
xarm_ros_code/xarm_ros/xarm7_moveit_config/config/: controllers.yaml  controllers_with_gripper.yaml  kinematics.yaml
xarm_ros_code/xarm_ros/xarm7_moveit_config/launch/: move_group.launch
xarm_ros_code/xarm_ros/xarm_description/urdf/: exterior_camera.urdf.xacro  xarm_device.urdf.xacro  xarm_device_macro.xacro
xarm_ros_code/xarm_ros/xarm_gazebo/launch/: spawn_exterior_camera.launch  xarm7_new.launch
(+12 files in other folders)
