<?xml version="1.0"?>
<package format="2">
  <name>xarm_control</name>
  <version>0.0.0</version>
  <description>The xarm_control package</description>
  <maintainer email="gunjan@todo.todo">gunjan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
